--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       };
       
       // URL dello script web app di Google Apps Script
-      const scriptURL = 'INSERISCI_QUI_URL_DELLO_SCRIPT_WEB_APP';
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbw4nerCqjYs_hz30I05ylgj_gV3_c-goKITQUxyr5MefgXmFVCJExTDU82iwieZUS4woQ/exec;
       
       // Invia i dati allo script
       fetch(scriptURL, {
