--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       
       // URL dello script web app di Google Apps Script
       // IMPORTANTE: Sostituisci questo URL con quello della tua web app
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbw4nerCqjYs_hz30I05ylgj_gV3_c-goKITQUxyr5MefgXmFVCJExTDU82iwieZUS4woQ/exec';
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbw4nerCqjYs_hz30I05ylgj_gV3_c-goKITQUxyr5MefgXmFVCJExTDU82iwieZUS4woQ/exec;
       
       // Mostra loading e disabilita il pulsante
       submitButton.disabled = true;
