--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       };
       
       // URL dello script web app di Google Apps Script
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbw4nerCqjYs_hz30I05ylgj_gV3_c-goKITQUxyr5MefgXmFVCJExTDU82iwieZUS4woQ/exec;
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbyMWG4wT-ZNoF3xDoVbQDRlOx4sUPDzP-pd380vfMuxTLYsNNpxI1YYPc-PnjgmAD_tYg/exec
       
       // Invia i dati allo script
       fetch(scriptURL, {
