--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         return;
       }
 
-      fetch('https://SCRIPT_URL_GOOGLE', {
+      fetch('https://script.google.com/macros/s/AKfycbxDchcDAEmuytWx016qUIiXq_5TaSE9XNMhNbTpg-0nIU4efAB2BF5LHStDpLL7-qFl/exec, {
         method: 'POST',
         mode: 'no-cors',
         headers: {
