--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
         return;
       }
 
-      fetch('https://script.google.com/macros/s/AKfycbxDchcDAEmuytWx016qUIiXq_5TaSE9XNMhNbTpg-0nIU4efAB2BF5LHStDpLL7-qFl/exec, {
-        method: 'POST',
+     fetch('https://script.google.com/macros/s/AKfycbw4nerCqjYs_hz30I05ylgj_gV3_c-goKITQUxyr5MefgXmFVCJExTDU82iwieZUS4woQ/exec, {        method: 'POST',
         mode: 'no-cors',
         headers: {
           'Content-Type': 'application/json'
